EKS_Terraform_Code/vpc.tf
#This will create the vpc with CIDE range

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "main"
  }
}
